--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
     <title>HTML Academy: Техномарт</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+      <header>
+          <div> <!--Верхнее меню хедера-->
+              <img src="img/logo.jpg" alt="Логотип магазина Техномарт" width=220px height=47px>
+              <img src="img/icon-search.jpg" alt="Иконка поиска по сайту" width=17px height=17px>
+              Поиск<!--Форма поиска-->
+              <img src="img/icon-bookmark.jpg" alt="Иконка закладки" width=17px height=17px>
+              Закладок <!--Форма отображения закладок-->
+          </div>
+      </header>
 
   </body>
 </html>
