--- a/index.html
+++ b/index.html
@@ -7,13 +7,80 @@
   <body>
       <header>
           <div> <!--Верхнее меню хедера-->
-              <img src="img/logo.jpg" alt="Логотип магазина Техномарт" width=220px height=47px>
-              <img src="img/icon-search.jpg" alt="Иконка поиска по сайту" width=17px height=17px>
+              <img src="img/logo.png" alt="Фон Логотипа магазина Техномарт" width=220px height=47px>
+              <img src="img/logo.png" alt="Логотип магазина Техномарт" width=108px height=18px>
+              <img src="img/icon-search.png" alt="Иконка поиска по сайту" width=17px height=17px>
               Поиск<!--Форма поиска-->
-              <img src="img/icon-bookmark.jpg" alt="Иконка закладки" width=17px height=17px>
-              Закладок <!--Форма отображения закладок-->
+              <img src="img/icon-bookmark.png" alt="Иконка закладки" width=14px height=16px>
+              Закладки: 0 <!--Форма отображения закладок-->
+              <img src="img/icon-cart.png" alt="Иконка Корзины" width=15px height=15px>
+              Корзина: 0<!--Форма отображения Корзины-->
+              <a href="/cart.html">Оформить заказ</a>
+          </div>
+          <div> <!-- среднняя часть хедера -->
+              <span><i>Интернет-магазин <br>
+                    строительных материалов <br>
+                    и инструментов для ремонта
+                    </i>
+              </span>
+              <span><img src="img/phone.png" alt="Иконка телефона" width=19px height=19px>
+                  +7 (812) 555-05-55
+              </span>
+              <span>
+                  г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
+              </span>
+              <span>
+                  <img src="img/enter-fon.png" alt="Фон входа в магазин Техномарт" width=121px height=45px>
+                  <a href="/enter.html">
+                      <img src="img/enter.png" alt="Иконка входа" width=20px height=17px>
+                      Войти
+                  </a>
+             </span>
+             <span>
+                 <img src="img/registration-fon.png" alt="Фон входа в регистрацию" width=150px height=45px>
+                 <a href="/registration.html"> Регистрация</a>
+              </span>
+             <nav>
+                 <a href="/index.html">Главная</a>
+                 <a href="/about.html">Компания</a>
+                 <a href="/catalog.html">Каталог</a>
+                 <a href="news.html">Новости</a>
+                 <a href="specpredlog.html">Спецпредложения</a>
+                 <a href="dostavka.html">Доставка</a>
+                 <a href="contacts.html">Контакты</a>
+             </nav>
           </div>
       </header>
+      <main>
+          Разметим на следующем уроке
+          <section> <!--Разметка информационного блока-->
+              <div> <!--Разметка блока КОМПАНИЯ «Техномарт» -->
+                  <h2>КОМПАНИЯ «Техномарт»</h2>
+                  <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и <br>строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
+                  <p>Мы можем доставить ваш товар в самые отдаленные точки России!<br>
+                  Техномарт работает со многими транспортными компаниями:</p>
+                  <ul>
+                      <li>Деловые линии</li>
+                      <li>Автотрейдинг</li>
+                      <li>ЖелДорЭкспедиция</li>
+                 </ul>
+                 <div>
+                      <img src="img/about-fon.png" alt="Фон входа в Подробнее о компании" width=220px height=38px>
+                       <a href="/about.html"> Подробнее о компании</a>
+                  </div>
+               </div>
+              <div><!--Разметка блока КОНТАКТЫ -->
+                  <h2>КОНТАКТЫ</h2>
+                  <p>Вы можете забрать товар сами,<br>
+                  заехав в наш офис:</p>
+                  <div> место для карты поохода</div>
+                  <div>
+                      <img src="img/btn-fon.png" alt="Фон входа в форму обратной связи" width=220px height=38px>
+                       <input type="button" value=" Заблудились? НапиШИТЕ НАМ!">
+                  </div>
+              </div>
+          </section>
+      </main>
 
   </body>
 </html>
