--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Техномарт</title>
+    <title>Техномарт-Главная</title>
   </head>
   <body>
       <header>
@@ -42,17 +42,18 @@
               </span>
              <nav>
                  <a href="/index.html">Главная</a>
-                 <a href="/about.html">Компания</a>
+                 <a href="">Компания</a>
                  <a href="/catalog.html">Каталог</a>
-                 <a href="news.html">Новости</a>
-                 <a href="specpredlog.html">Спецпредложения</a>
-                 <a href="dostavka.html">Доставка</a>
+                 <a href="">Новости</a>
+                 <a href="">Спецпредложения</a>
+                 <a href="">Доставка</a>
                  <a href="contacts.html">Контакты</a>
              </nav>
           </div>
       </header>
       <main>
-          Разметим на следующем уроке
+          <h1>Строительные товары</h1>
+          <!--Разметим на следующем уроке-->
           <section> <!--Разметка информационного блока-->
               <div> <!--Разметка блока КОМПАНИЯ «Техномарт» -->
                   <h2>КОМПАНИЯ «Техномарт»</h2>
@@ -81,6 +82,50 @@
               </div>
           </section>
       </main>
-
+      <footer>
+        <section>
+          <img src="img/logo.png" alt="Фон Логотипа магазина Техномарт" width=220px height=68px>
+          <img src="img/logo.png" alt="Логотип магазина Техномарт" width=138px height=23px>
+          <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
++7 (812) 555-05-55
+          </p>
+        </section>
+        <section> <!-- верхняя часть футера-->
+            <ul>
+              <li><a href="/index.html">Главная</a></li>
+              <li><a href="">Компания</a></li>
+              <li><a href="/catalog.html">Каталог</a></li>
+              <li><a href="">Новости</a></li>
+              <li><a href="">Спецпредложения</a></li>
+              <li><a href="">Доставка</a></li>
+              <li><a href="contacts.html">Контакты</a></li>
+            </ul>
+            <ul>
+                <li><a href="">Материалы</a></li>
+                <li><a href="">Техника</a></li>
+                <li><a href="">Инструмент</a></li>
+                <li><a href="">Спецпредложения</a></li>
+        </section>
+        <section> <!-- нижняя часть футера-->
+           <div>
+              © 2010–2019 Компания «Техномарт»<br>
+Все права защищен
+           </div>
+           <div>
+               <img src="img/icon-vk.png" alt="Иконка ВК" width=44px height=44px>
+               <img src="img/icon-fb.png" alt="Иконка ФБ" width=44px height=44px>
+               <img src="img/icon-insta.png" alt="Иконка Инста" width=44px height=44px>
+           </div>
+           <p>
+            Обратная связь:<br>
+<a href="">mail@htmlacademy.ru</a>
+           </p>
+            <p>
+            Разработано —
+htmlacademy.ru<br>
+           <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
+                      </p>
+        </section>
+      </footer>
   </body>
 </html>
