--- a/catalog.html
+++ b/catalog.html
@@ -74,6 +74,66 @@
                <li><input type="checkbox">Dewalt</li>
                <li><input type="checkbox">Hitachi</li>
             </ul>
+           <ul>
+              <li><input type="radio">Аккумуляторные </li>
+              <li><input type="radio">Сетевые</li>
+           </ul>
+           <input type="button" vlaue="ПОКАЗАТЬ">
+      </span>
+       <section><!--Выбор товаров-->
+           <span>
+               <img src="contimg/snippet-18927 copy 3.png" alt="изображение перфоратора BOSCH BFG 3000">
+               <p>Перфоратор BOSCH BFG 3000</p>
+               <p>22500 Р.</p>
+               <input type="button" value="15500 Р.">
+           </span>
+           <span>
+               <img src="contimg/snippet-945 copy 2.png" alt="изображение перфоратора BOSCH BFG 6000">
+               <p>Перфоратор BOSCH BFG 6000</p>
+               <p>30500 Р.</p>
+               <input type="button" value="25500 Р.">
+           </span>
+           <span>
+                <img src="contimg/snippet-18927 copy 2.png" alt="изображение перфоратора BOSCH BFG 2000">
+                <p>Перфоратор BOSCH BFG 2000</p>
+                <input type="button" value="12500 Р.">
+           </span>
+           <span>
+               <img src="contimg/snippet-18927 copy 3.png" alt="изображение перфоратора BOSCH BFG 3000">
+               <p>Перфоратор BOSCH BFG 3000</p>
+               <p>22500 Р.</p>
+               <input type="button" value="15500 Р.">
+           </span>
+           <span>
+               <img src="contimg/snippet-945 copy 2.png" alt="изображение перфоратора BOSCH BFG 6000">
+               <p>Перфоратор BOSCH BFG 6000</p>
+               <p>30500 Р.</p>
+               <input type="button" value="25500 Р.">
+           </span>
+           <span>
+                <img src="contimg/snippet-18927 copy 2.png" alt="изображение перфоратора BOSCH BFG 2000">
+                <p>Перфоратор BOSCH BFG 2000</p>
+                <input type="button" value="12500 Р.">
+           </span>
+           <span>
+           <span>
+                 <img src="contimg/snippet-18927 copy 3.png" alt="изображение перфоратора BOSCH BFG 3000">
+                 <p>Перфоратор BOSCH BFG 3000</p>
+                 <p>22500 Р.</p>
+                 <input type="button" value="15500 Р.">
+           </span>
+           <span>
+                  <img src="contimg/snippet-945 copy 2.png" alt="изображение перфоратора BOSCH BFG 6000">
+                  <p>Перфоратор BOSCH BFG 6000</p>
+                  <p>30500 Р.</p>
+                  <input type="button" value="25500 Р.">
+           </span>
+           <span>
+                   <img src="contimg/snippet-18927 copy 2.png" alt="изображение перфоратора BOSCH BFG 2000">
+                   <p>Перфоратор BOSCH BFG 2000</p>
+                   <input type="button" value="12500 Р.">
+           </span>
+       </section>
       <footer>
         <section>
           <img src="img/logo.png" alt="Фон Логотипа магазина Техномарт" width=220px height=68px>
