--- a/catalog.html
+++ b/catalog.html
@@ -7,38 +7,43 @@
   <body>
       <header>
           <div> <!--Верхнее меню хедера-->
-              <img src="img/logo.png" alt="Фон Логотипа магазина Техномарт" width=220px height=47px>
-              <img src="img/logo.png" alt="Логотип магазина Техномарт" width=108px height=18px>
-              <img src="img/icon-search.png" alt="Иконка поиска по сайту" width=17px height=17px>
-              Поиск<!--Форма поиска-->
-              <img src="img/icon-bookmark.png" alt="Иконка закладки" width=14px height=16px>
-              Закладки: 0 <!--Форма отображения закладок-->
-              <img src="img/icon-cart.png" alt="Иконка Корзины" width=15px height=15px>
-              Корзина: 0<!--Форма отображения Корзины-->
+              <!--Логотип-->
+              <div "Фон Логотипа магазина Техномарт" width=220 height=47>
+              <img src="img/logo.png" alt="Логотип магазина Техномарт" width=108 height=18>
+              </div>
+              <!--Форма поиска-->
+              <div>
+                   <img src="img/icon-search.png" alt="Иконка Поиск" width=17 height=17>
+                 Поиск:
+              </div>
+              <div><!--Форма отображения закладок-->
+              <img src="img/icon-bookmark.png" alt="Иконка закладки" width=14 height=16>
+              Закладки: 0
+              </div>
+              <div><!--Форма отображения Корзины-->
+              <img src="img/icon-cart.png" alt="Иконка Корзины" width=15 height=15>
+              Корзина: 0
               <a href="/cart.html">Оформить заказ</a>
+              </div>
           </div>
-          <div> <!-- среднняя часть хедера -->
-              <span><i>Интернет-магазин <br>
-                    строительных материалов <br>
-                    и инструментов для ремонта
-                    </i>
-              </span>
-              <span><img src="img/phone.png" alt="Иконка телефона" width=19px height=19px>
-                  +7 (812) 555-05-55
-              </span>
-              <span>
-                  г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
-              </span>
-              <span>
+         <div> <!-- среднняя часть хедера -->
+          <i>Интернет-магазин
+                строительных материалов
+                и инструментов для ремонта
+                </i>
+          <div><img src="img/phone.png" alt="Иконка телефона" width=19 height=19>
+              <a href="tel:+7 (812) 555-05-55">+7 (812) 555-05-55</a>
+          </div>
+          <span>
+              г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
+          </span>
                   <p>
-                  <img src="img/ava-fon.png" alt="фон поля пользователя" width=121px height=45px>
                   <img src="img/icon-user.png" alt="Иконка аватарки пользователя" width=20px height=18px>
                   Равшан Джамшутович
                    <img src="img/icon-login.png" alt="Иконка выхода из логина" width=20px height=17px>
                  </p>
                  <a href="">Мои заказы</a>
                  <a href="">Личный кабинет</a>
-             </span>
              <nav>
                  <a href="/index.html">Главная</a>
                  <a href="">Компания</a>
@@ -52,7 +57,7 @@
       </header>
       <main>
           
-       <span>
+       <div>
         <img src="img/icon-home.png" alt="Иконка домой" width=14px height=12px>
         <img src="img/icon-right-small.png" alt="Иконка указаьеля влево" width=8px height=12px>
         <input type="text" value="Каталог">
@@ -60,12 +65,12 @@
         <input type="text" value="Инструмент">
         <img src="img/icon-right-small.png" alt="Иконка указаьеля влево" width=8px height=12px>
         <input type="text" value="Перфораторы">
-      </span>
+      </div>
         <h1>ПЕРФОРАТОРЫ </h1>
-       <span>
+       <div>
            Фильтры
-        </span>
-       <span>
+        </div>
+       <div>
            <h2>ПРОИЗВОДИТЕЛИ:</h2>
            <ul>
                <li><input type="checkbox">BOSCH </li>
@@ -79,105 +84,104 @@
               <li><input type="radio">Сетевые</li>
            </ul>
            <input type="button" vlaue="ПОКАЗАТЬ">
-      </span>
+      </div>
        <section><!--Выбор товаров-->
-           <span>
+           <div>
                <img src="contimg/snippet-18927 copy 3.png" alt="изображение перфоратора BOSCH BFG 3000">
                <p>Перфоратор BOSCH BFG 3000</p>
                <p>22500 Р.</p>
                <input type="button" value="15500 Р.">
-           </span>
-           <span>
+           </div>
+           <div>
                <img src="contimg/snippet-945 copy 2.png" alt="изображение перфоратора BOSCH BFG 6000">
                <p>Перфоратор BOSCH BFG 6000</p>
                <p>30500 Р.</p>
                <input type="button" value="25500 Р.">
-           </span>
-           <span>
+           </div>
+           <div>
                 <img src="contimg/snippet-18927 copy 2.png" alt="изображение перфоратора BOSCH BFG 2000">
                 <p>Перфоратор BOSCH BFG 2000</p>
                 <input type="button" value="12500 Р.">
-           </span>
-           <span>
+           </div>
+           <div>
                <img src="contimg/snippet-18927 copy 3.png" alt="изображение перфоратора BOSCH BFG 3000">
                <p>Перфоратор BOSCH BFG 3000</p>
                <p>22500 Р.</p>
                <input type="button" value="15500 Р.">
-           </span>
-           <span>
+           </div>
+           <div>
                <img src="contimg/snippet-945 copy 2.png" alt="изображение перфоратора BOSCH BFG 6000">
                <p>Перфоратор BOSCH BFG 6000</p>
                <p>30500 Р.</p>
                <input type="button" value="25500 Р.">
-           </span>
-           <span>
+           </div>
+           <div>
                 <img src="contimg/snippet-18927 copy 2.png" alt="изображение перфоратора BOSCH BFG 2000">
                 <p>Перфоратор BOSCH BFG 2000</p>
                 <input type="button" value="12500 Р.">
-           </span>
-           <span>
-           <span>
+           </div>
+           <div>
+           <div>
                  <img src="contimg/snippet-18927 copy 3.png" alt="изображение перфоратора BOSCH BFG 3000">
                  <p>Перфоратор BOSCH BFG 3000</p>
                  <p>22500 Р.</p>
                  <input type="button" value="15500 Р.">
-           </span>
-           <span>
+           </div>
+           <div>
                   <img src="contimg/snippet-945 copy 2.png" alt="изображение перфоратора BOSCH BFG 6000">
                   <p>Перфоратор BOSCH BFG 6000</p>
                   <p>30500 Р.</p>
                   <input type="button" value="25500 Р.">
-           </span>
-           <span>
+           </div>
+           <div>
                    <img src="contimg/snippet-18927 copy 2.png" alt="изображение перфоратора BOSCH BFG 2000">
                    <p>Перфоратор BOSCH BFG 2000</p>
                    <input type="button" value="12500 Р.">
-           </span>
+           </div>
        </section>
-      <footer>
-        <section>
-          <img src="img/logo.png" alt="Фон Логотипа магазина Техномарт" width=220px height=68px>
-          <img src="img/logo.png" alt="Логотип магазина Техномарт" width=138px height=23px>
-          <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
-+7 (812) 555-05-55
-          </p>
-        </section>
-        <section> <!-- верхняя часть футера-->
-            <ul>
-              <li><a href="/index.html">Главная</a></li>
-              <li><a href="">Компания</a></li>
-              <li><a href="/catalog.html">Каталог</a></li>
-              <li><a href="">Новости</a></li>
-              <li><a href="">Спецпредложения</a></li>
-              <li><a href="">Доставка</a></li>
-              <li><a href="contacts.html">Контакты</a></li>
-            </ul>
-            <ul>
-                <li><a href="">Материалы</a></li>
-                <li><a href="">Техника</a></li>
-                <li><a href="">Инструмент</a></li>
-                <li><a href="">Спецпредложения</a></li>
-        </section>
-        <section> <!-- нижняя часть футера-->
-           <div>
-              © 2010–2019 Компания «Техномарт»<br>
-Все права защищен
-           </div>
-           <div>
-               <img src="img/icon-vk.png" alt="Иконка ВК" width=44px height=44px>
-               <img src="img/icon-fb.png" alt="Иконка ФБ" width=44px height=44px>
-               <img src="img/icon-insta.png" alt="Иконка Инста" width=44px height=44px>
-           </div>
-           <p>
-            Обратная связь:<br>
-<a href="">mail@htmlacademy.ru</a>
-           </p>
-            <p>
-            Разработано —
-htmlacademy.ru<br>
-           <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
-                      </p>
-        </section>
-      </footer>
+      <footer> <!-- верхняя часть футера-->
+              <div> <!--логотип + список-->
+                <img src="img/logo.png" alt="Логотип магазина Техномарт" width=138 height=23>
+                  <ul>
+                    <li><a href="/index.html">Главная</a></li>
+                    <li><a href="">Компания</a></li>
+                    <li><a href="/catalog.html">Каталог</a></li>
+                    <li><a href="">Новости</a></li>
+                    <li><a href="">Спецпредложения</a></li>
+                    <li><a href="">Доставка</a></li>
+                    <li><a href="contacts.html">Контакты</a></li>
+                  </ul>
+                </div>
+              <div><!--адрес + список-->
+                  <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
+                            <a href="tel:+7 (812) 555-05-55">+7 (812) 555-05-55</a>
+                           </p>
+                  <ul>
+                      <li><a href="">Материалы</a></li>
+                      <li><a href="">Техника</a></li>
+                      <li><a href="">Инструмент</a></li>
+                      <li><a href="">Спецпредложения</a></li>
+              </div>
+              
+              <div> <!-- нижняя линия на темном фоне-->
+                   &copy 2010–2019 Компания &laquoТехномарт&raquo
+      Все права защищены
+              </div>
+                 <ul>
+                     <li>VK</li>
+                     <li>fb</li>
+                     <li>insta</li>
+                 </ul>
+                 <p>
+                  Обратная связь:<br>
+      <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+                 </p>
+                  <p>
+                  Разработано —
+      htmlacademy.ru
+                 <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
+                 </p>
+              </section>
+            </footer>
   </body>
 </html>
