--- a/index.html
+++ b/index.html
@@ -7,39 +7,47 @@
   <body>
       <header>
           <div> <!--Верхнее меню хедера-->
-              <img src="img/logo.png" alt="Фон Логотипа магазина Техномарт" width=220px height=47px>
-              <img src="img/logo.png" alt="Логотип магазина Техномарт" width=108px height=18px>
-              <img src="img/icon-search.png" alt="Иконка поиска по сайту" width=17px height=17px>
-              Поиск<!--Форма поиска-->
-              <img src="img/icon-bookmark.png" alt="Иконка закладки" width=14px height=16px>
-              Закладки: 0 <!--Форма отображения закладок-->
-              <img src="img/icon-cart.png" alt="Иконка Корзины" width=15px height=15px>
-              Корзина: 0<!--Форма отображения Корзины-->
+              <!--Логотип-->
+              <div "Фон Логотипа магазина Техномарт" width=220 height=47>
+              <img src="img/logo.png" alt="Логотип магазина Техномарт" width=108 height=18>
+              </div>
+              <!--Форма поиска-->
+              <div>
+                   <img src="img/icon-search.png" alt="Иконка Поиск" width=17 height=17>
+                 Поиск:
+              </div>
+              <div><!--Форма отображения закладок-->
+              <img src="img/icon-bookmark.png" alt="Иконка закладки" width=14 height=16>
+              Закладки: 0
+              </div>
+              <div><!--Форма отображения Корзины-->
+              <img src="img/icon-cart.png" alt="Иконка Корзины" width=15 height=15>
+              Корзина: 0
               <a href="/cart.html">Оформить заказ</a>
+              </div>
           </div>
           <div> <!-- среднняя часть хедера -->
-              <span><i>Интернет-магазин <br>
-                    строительных материалов <br>
+              <i>Интернет-магазин
+                    строительных материалов
                     и инструментов для ремонта
                     </i>
-              </span>
-              <span><img src="img/phone.png" alt="Иконка телефона" width=19px height=19px>
-                  +7 (812) 555-05-55
-              </span>
+              <div><img src="img/phone.png" alt="Иконка телефона" width=19 height=19>
+                  <a href="tel:+7 (812) 555-05-55">+7 (812) 555-05-55</a>
+              </div>
               <span>
                   г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
               </span>
-              <span>
-                  <img src="img/enter-fon.png" alt="Фон входа в магазин Техномарт" width=121px height=45px>
+              <div>
+                  <img src="img/enter-fon.png" alt="Фон входа в магазин Техномарт" width=121 height=45>
                   <a href="/enter.html">
-                      <img src="img/enter.png" alt="Иконка входа" width=20px height=17px>
+                  <img src="img/enter.png" alt="Иконка входа" width=20 height=17>
                       Войти
                   </a>
-             </span>
-             <span>
-                 <img src="img/registration-fon.png" alt="Фон входа в регистрацию" width=150px height=45px>
+             </div>
+             <div>
+                 <img src="img/registration-fon.png" alt="Фон входа в регистрацию" width=150 height=45>
                  <a href="/registration.html"> Регистрация</a>
-              </span>
+              </div>
              <nav>
                  <a href="/index.html">Главная</a>
                  <a href="">Компания</a>
@@ -47,7 +55,7 @@
                  <a href="">Новости</a>
                  <a href="">Спецпредложения</a>
                  <a href="">Доставка</a>
-                 <a href="contacts.html">Контакты</a>
+                 <a href="">Контакты</a>
              </nav>
           </div>
       </header>
@@ -56,41 +64,35 @@
           <!--Разметим на следующем уроке-->
           <section> <!--Разметка информационного блока-->
               <div> <!--Разметка блока КОМПАНИЯ «Техномарт» -->
-                  <h2>КОМПАНИЯ «Техномарт»</h2>
-                  <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и <br>строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
-                  <p>Мы можем доставить ваш товар в самые отдаленные точки России!<br>
+                  <div>
+                      <h2>КОМПАНИЯ «Техномарт»</h2>
+                      <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
+                      <p>Мы можем доставить ваш товар в самые отдаленные точки России!
                   Техномарт работает со многими транспортными компаниями:</p>
-                  <ul>
+                    <ul>
                       <li>Деловые линии</li>
                       <li>Автотрейдинг</li>
                       <li>ЖелДорЭкспедиция</li>
-                 </ul>
+                    </ul>
+                 </div>
                  <div>
-                      <img src="img/about-fon.png" alt="Фон входа в Подробнее о компании" width=220px height=38px>
                        <a href="/about.html"> Подробнее о компании</a>
-                  </div>
+                 </div>
                </div>
               <div><!--Разметка блока КОНТАКТЫ -->
                   <h2>КОНТАКТЫ</h2>
                   <p>Вы можете забрать товар сами,<br>
                   заехав в наш офис:</p>
-                  <div> место для карты поохода</div>
+                  <a href=""><img src="img/map"> место для карты прохода</a>
                   <div>
-                      <img src="img/btn-fon.png" alt="Фон входа в форму обратной связи" width=220px height=38px>
                        <input type="button" value=" Заблудились? НапиШИТЕ НАМ!">
                   </div>
               </div>
           </section>
       </main>
-      <footer>
-        <section>
-          <img src="img/logo.png" alt="Фон Логотипа магазина Техномарт" width=220px height=68px>
-          <img src="img/logo.png" alt="Логотип магазина Техномарт" width=138px height=23px>
-          <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
-+7 (812) 555-05-55
-          </p>
-        </section>
-        <section> <!-- верхняя часть футера-->
+      <footer> <!-- верхняя часть футера-->
+        <div> <!--логотип + список-->
+          <img src="img/logo.png" alt="Логотип магазина Техномарт" width=138 height=23>
             <ul>
               <li><a href="/index.html">Главная</a></li>
               <li><a href="">Компания</a></li>
@@ -100,31 +102,36 @@
               <li><a href="">Доставка</a></li>
               <li><a href="contacts.html">Контакты</a></li>
             </ul>
+          </div>
+        <div><!--адрес + список-->
+            <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
+                      <a href="tel:+7 (812) 555-05-55">+7 (812) 555-05-55</a>
+                     </p>
             <ul>
                 <li><a href="">Материалы</a></li>
                 <li><a href="">Техника</a></li>
                 <li><a href="">Инструмент</a></li>
                 <li><a href="">Спецпредложения</a></li>
-        </section>
-        <section> <!-- нижняя часть футера-->
-           <div>
-              © 2010–2019 Компания «Техномарт»<br>
-Все права защищен
-           </div>
-           <div>
-               <img src="img/icon-vk.png" alt="Иконка ВК" width=44px height=44px>
-               <img src="img/icon-fb.png" alt="Иконка ФБ" width=44px height=44px>
-               <img src="img/icon-insta.png" alt="Иконка Инста" width=44px height=44px>
-           </div>
+        </div>
+        
+        <div> <!-- нижняя линия на темном фоне-->
+             &copy 2010–2019 Компания &laquoТехномарт&raquo
+Все права защищены
+        </div>
+           <ul>
+               <li>VK</li>
+               <li>fb</li>
+               <li>insta</li>
+           </ul>
            <p>
             Обратная связь:<br>
-<a href="">mail@htmlacademy.ru</a>
+<a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
            </p>
             <p>
             Разработано —
-htmlacademy.ru<br>
+htmlacademy.ru
            <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
-                      </p>
+           </p>
         </section>
       </footer>
   </body>
