--- a/catalog.html
+++ b/catalog.html
@@ -38,9 +38,9 @@
               г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
           </span>
                   <p>
-                  <img src="img/icon-user.png" alt="Иконка аватарки пользователя" width=20px height=18px>
+                  <img src="img/icon-user.png" alt="Иконка аватарки пользователя" width=20 height=18>
                   Равшан Джамшутович
-                   <img src="img/icon-login.png" alt="Иконка выхода из логина" width=20px height=17px>
+                   <img src="img/icon-login.png" alt="Иконка выхода из логина" width=20 height=17>
                  </p>
                  <a href="">Мои заказы</a>
                  <a href="">Личный кабинет</a>
@@ -58,12 +58,12 @@
       <main>
           
        <div>
-        <img src="img/icon-home.png" alt="Иконка домой" width=14px height=12px>
-        <img src="img/icon-right-small.png" alt="Иконка указаьеля влево" width=8px height=12px>
+        <img src="img/icon-home.png" alt="Иконка домой" width=14 height=12>
+        <img src="img/icon-right-small.png" alt="Иконка указаьеля влево" width=8 height=12>
         <input type="text" value="Каталог">
-        <img src="img/icon-right-small.png" alt="Иконка указаьеля влево" width=8px height=12px>
+        <img src="img/icon-right-small.png" alt="Иконка указаьеля влево" width=8 height=12>
         <input type="text" value="Инструмент">
-        <img src="img/icon-right-small.png" alt="Иконка указаьеля влево" width=8px height=12px>
+        <img src="img/icon-right-small.png" alt="Иконка указаьеля влево" width=8 height=12>
         <input type="text" value="Перфораторы">
       </div>
         <h1>ПЕРФОРАТОРЫ </h1>
