--- a/catalog.html
+++ b/catalog.html
@@ -8,9 +8,10 @@
       <header>
           <div> <!--Верхнее меню хедера-->
               <!--Логотип-->
-              <div "Фон Логотипа магазина Техномарт" width=220 height=47>
+            <a href="/index.html">
               <img src="img/logo.png" alt="Логотип магазина Техномарт" width=108 height=18>
-              </div>
+            </a>
+         
               <!--Форма поиска-->
               <div>
                    <img src="img/icon-search.png" alt="Иконка Поиск" width=17 height=17>
@@ -141,7 +142,7 @@
        </section>
       <footer> <!-- верхняя часть футера-->
               <div> <!--логотип + список-->
-                <img src="img/logo.png" alt="Логотип магазина Техномарт" width=138 height=23>
+              <a href="/index.html">  <img src="img/logo.png" alt="Логотип магазина Техномарт" width=138 height=23></a>
                   <ul>
                     <li><a href="/index.html">Главная</a></li>
                     <li><a href="">Компания</a></li>
