--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
       <header>
           <div> <!--Верхнее меню хедера-->
               <!--Логотип-->
-              <div "Фон Логотипа магазина Техномарт" width=220 height=47>
-              <img src="img/logo.png" alt="Логотип магазина Техномарт" width=108 height=18>
-              </div>
+             <a href=""> <img src="img/logo.png" alt="Логотип магазина Техномарт" width=108 height=18>
+             
               <!--Форма поиска-->
               <div>
                    <img src="img/icon-search.png" alt="Иконка Поиск" width=17 height=17>
@@ -92,7 +91,7 @@
       </main>
       <footer> <!-- верхняя часть футера-->
         <div> <!--логотип + список-->
-          <img src="img/logo.png" alt="Логотип магазина Техномарт" width=138 height=23>
+         <a href=""><img src="img/logo.png" alt="Логотип магазина Техномарт" width=138 height=23></a>
             <ul>
               <li><a href="/index.html">Главная</a></li>
               <li><a href="">Компания</a></li>
