Привязал экспортированные изображения
Привязал картинки на нужное место

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
       <header>
           <div> <!--Верхнее меню хедера-->
               <!--Логотип-->
+             <a href=""> <img src="img/logo-technomart.png" alt="Логотип магазина Техномарт" width=108 height=18>
+            </a>
               <!--Форма поиска-->
               <div>
                    <img src="img/icon-search.png" alt="Иконка Поиск" width=17 height=17>
@@ -28,21 +30,17 @@
                     строительных материалов
                     и инструментов для ремонта
                     </i>
-              <div><img src="img/phone.png" alt="Иконка телефона" width=19 height=19>
+              <div><img src="img/icon-phone.png" alt="Иконка телефона" width=19 height=19>
                   <a href="tel:+7 (812) 555-05-55">+7 (812) 555-05-55</a>
               </div>
               <span>
                   г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
               </span>
               <div>
-                  <img src="img/enter-fon.png" alt="Фон входа в магазин Техномарт" width=121 height=45>
                   <a href="/enter.html">
-                  <img src="img/enter.png" alt="Иконка входа" width=20 height=17>
+                  <img src="img/icon-login.png" alt="Иконка входа" width=20 height=17>
                       Войти
                   </a>
-             </div>
-             <div>
-                 <img src="img/registration-fon.png" alt="Фон входа в регистрацию" width=150 height=45>
                  <a href="/registration.html"> Регистрация</a>
               </div>
              <nav>
