--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
             </a>
               <!--Форма поиска-->
               <div>
-                   <img src="img/icon-search.png" alt="Иконка Поиск" width=17 height=17>
+                   <img src="img/svg/icon-search.svg" alt="Поиск" width=17 height=17>
                  Поиск:
               </div>
               <div><!--Форма отображения закладок-->
-              <img src="img/icon-bookmark.png" alt="Иконка закладки" width=14 height=16>
+              <img src="img/svg/icon-bookmark.svg" alt="Закладки" width=14 height=16>
               Закладки: 0
               </div>
               <div><!--Форма отображения Корзины-->
-              <img src="img/icon-cart.png" alt="Иконка Корзины" width=15 height=15>
+              <img src="img/svg/icon-cart.svg" alt="Иконка Корзины" width=15 height=15>
               Корзина: 0
               <a href="/cart.html">Оформить заказ</a>
               </div>
@@ -30,7 +30,7 @@
                     строительных материалов
                     и инструментов для ремонта
                     </i>
-              <div><img src="img/icon-phone.png" alt="Иконка телефона" width=19 height=19>
+              <div><img src="img/svg/icon-phone.svg" alt="Иконка телефона" width=19 height=19>
                   <a href="tel:+7 (812) 555-05-55">+7 (812) 555-05-55</a>
               </div>
               <span>
@@ -38,7 +38,7 @@
               </span>
               <div>
                   <a href="/enter.html">
-                  <img src="img/icon-login.png" alt="Иконка входа" width=20 height=17>
+                  <img src="img/svg/icon-login.svg" alt="Иконка входа" width=20 height=17>
                       Войти
                   </a>
                  <a href="/registration.html"> Регистрация</a>
@@ -87,7 +87,7 @@
       </main>
       <footer> <!-- верхняя часть футера-->
         <div> <!--логотип + список-->
-         <a href=""><img src="img/logo.png" alt="Логотип магазина Техномарт" width=138 height=23></a>
+         <a href=""><img src="img/logo-technomart.png" alt="Логотип магазина Техномарт" width=138 height=23></a>
             <ul>
               <li><a href="/index.html">Главная</a></li>
               <li><a href="">Компания</a></li>
