--- a/index.html
+++ b/index.html
@@ -377,9 +377,9 @@
      </section>
 <!-------------------------нижняя линия на темном фоне------------------------------------------>
      <section class="down-footer footerdowntext">
-        <div class="holder">
-        <div>&copy;2010–2019 Компания&laquo;Техномарт&raquo; Все права защищены</div>
-        <ul class="notmark">
+        <div class="holder down-footer-holder">
+        <div class="copyright">&copy;2010–2019 Компания&laquo;Техномарт&raquo; <br>Все права защищены</div>
+        <ul class="notmark icons-holder">
           <li class="icons"> <!-- ----------иконка ВК --------------->
             <span class="visually-hidden"> Вконтакте наша группа</span>
             <a href="#">
@@ -402,13 +402,15 @@
             </a>
           </li>
         </ul>
-        <div class="footerdowntext">
-          <p> Обратная связь:</p>
-          <a href="mailto:mail@htmlacademy.ru" class="chcolor">mail@htmlacademy.ru</a>
-        </div>
-        <div class="footerdowntext">
-          <p>Разработано— htmlacademy.ru</p>
-          <a href="https://htmlacademy.ru/intensive/htmlcss" class="chcolor">htmlacademy.ru</a>
+        <div class="down-contact">
+            <div class="footerdowntext margin-footer-contact">
+              <p> Обратная связь:</p>
+              <a href="mailto:mail@htmlacademy.ru" class="chcolor">mail@htmlacademy.ru</a>
+            </div>
+            <div class="footerdowntext margin-footer-contact">
+              <p>Разработано—</p>
+              <a href="https://htmlacademy.ru/intensive/htmlcss" class="chcolor">htmlacademy.ru</a>
+            </div>
         </div>
         </div>
      </section>
